--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pomodoro App by Zach</title>
+    <title>45:00 - ZachPomodoro</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
         <div id="header">
-                <h1>Zach's Pomodoro</h1>
-                <button type="settings">Settings</button>
+                <h1 class="header-text">Zach's Pomodoro</h1>
+                <button class="settings-button">Settings</button>
         </div>
     </div>
     <div class="container">
         <div id="timer">
             <div class="phase-buttons">
-                <button type="time-buttons">Focus</button>
-                <button type="time-buttons">Short Break</button>
-                <button type="time-buttons">Long Break</button>
+                <button class="focus-button">Focus</button>
+                <button class="short-break">Short Break</button>
+                <button class="long-break">Long Break</button>
             </div>
             <div class="timer-display">45:00</div>
             <div id="start-stop">
-                <button class="start">Start</button>
-                <button class="stop">Stop</button>
-                <button class="reset">Reset</button>
             </div>
             <h2>You have spent ____ time focusing!<br>Good Work!</h2>
         </div>
+    </div>
+    <div class="footer">
     </div>
     <script src="script.js"></script>
   </body>
