added back buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             </div>
             <div class="timer-display">45:00</div>
             <div id="start-stop">
+              <button class="start">Start</button>
+              <button class="stop">Stop</button>
+              <button class="reset">Reset</button>
             </div>
             <h2>You have spent ____ time focusing!<br>Good Work!</h2>
         </div>
