small update. going to refractor app later

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="timer">
             <div class="phase-buttons">
-                <button class="focus-button">Focus</button>
+                <button class="focus">Focus</button>
                 <button class="short-break">Short Break</button>
                 <button class="long-break">Long Break</button>
             </div>
